# Anverali_test

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/app/: settings.py  urls.py
app/customer/: forms.py  models.py  urls.py  views.py
app/customer/migrations/: 0001_initial.py
app/customer/templates/: customer-dashboard.html
app/performer/: apps.py  forms.py  models.py  urls.py  views.py
app/performer/templates/: performer-dashboard.html
app/static/css/: styles.css
app/user/: admin.py  forms.py  models.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0002_alter_user_phone_number.py
app/user/static/css/: styles.css
app/user/templates/: home.html  login.html  signup.html
app/user/templates/account/: login.html  signup.html
